Added Vcs-* URLs

--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,8 @@ Maintainer: Christian Kastner <debian@kvr.at>
 Build-Depends: debhelper (>= 9), lsb-release
 Standards-Version: 3.9.5
 Homepage: http://people.redhat.com/~dhowells/keyutils/
+Vcs-Git: git://anonscm.debian.org/collab-maint/keyutils.git
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/keyutils.git
 
 Package: keyutils
 Architecture: linux-any
