Execute tests with executable+library from build result
Upstream code runs the tests against the installed versions. We can force the
use of the build result by prepending to PATH and setting LD_LIBRARY_PATH.

--- a/debian/rules
+++ b/debian/rules
@@ -18,8 +18,8 @@ override_dh_auto_install:
 	dh_auto_install -- LIBDIR=/lib/$(DEB_HOST_MULTIARCH) USRLIBDIR=/usr/lib/$(DEB_HOST_MULTIARCH)
 
 override_dh_auto_test:
-	# some tests do not yet work properly
-	-dh_auto_test
+	# Use  the library and executable we just built
+	dh_auto_test -- PATH=$(CURDIR):$(PATH) LD_LIBRARY_PATH=$(CURDIR)
 
 override_dh_install:
 	dh_install --fail-missing
