--- a/debian/rules
+++ b/debian/rules
@@ -18,8 +18,9 @@ override_dh_auto_install:
 	dh_auto_install -- LIBDIR=/lib/$(DEB_HOST_MULTIARCH) USRLIBDIR=/usr/lib/$(DEB_HOST_MULTIARCH)
 
 override_dh_auto_test:
-	# Use  the library and executable we just built
-	dh_auto_test -- PATH=$(CURDIR):$(PATH) LD_LIBRARY_PATH=$(CURDIR)
+	# Use  the library and executable we just built;
+	# skip tests requiring root
+	dh_auto_test -- PATH=$(CURDIR):$(PATH) LD_LIBRARY_PATH=$(CURDIR) SKIPROOT=yes
 
 override_dh_install:
 	dh_install --fail-missing
