--- a/debian/rules
+++ b/debian/rules
@@ -2,9 +2,13 @@
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
+DEB_BUILD_ARCH ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 DEB_HOST_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+
+# Skip MAXDESCLEN tests on these architectures:
+SKIPMAXDESCLEN = mip mipsel sparc
 
 %:
 	dh ${@}
@@ -19,8 +23,22 @@ override_dh_auto_install:
 
 override_dh_auto_test:
 	# Use  the library and executable we just built;
-	# skip tests requiring root
-	dh_auto_test -- PATH=$(CURDIR):$(PATH) LD_LIBRARY_PATH=$(CURDIR) SKIPROOT=yes SKIPINSTALLED=yes
+	# skip tests requiring root;
+	# disable maxdesclen tests on mips, mipsel, and sparc
+ifeq (,$(findstring $(DEB_BUILD_ARCH),mips mipsel sparc))
+	dh_auto_test -- \
+		PATH=$(CURDIR):$(PATH) \
+		LD_LIBRARY_PATH=$(CURDIR) \
+		SKIPROOT=yes \
+		SKIPINSTALLED=yes
+else
+	dh_auto_test -- \
+		PATH=$(CURDIR):$(PATH) \
+		LD_LIBRARY_PATH=$(CURDIR) \
+		SKIPROOT=yes \
+		SKIPINSTALLED=yes \
+		MAXDESCLEN_NOCHECK=yes
+endif
 
 override_dh_install:
 	dh_install --fail-missing
