--- a/debian/rules
+++ b/debian/rules
@@ -25,7 +25,7 @@ override_dh_auto_test:
 	# Use  the library and executable we just built;
 	# skip tests requiring root;
 	# disable maxdesclen tests on mips, mipsel, and sparc
-ifeq (,$(findstring $(DEB_BUILD_ARCH),mips mipsel sparc))
+ifeq (,$(findstring $(DEB_BUILD_ARCH),mips mipsel sparc arm64))
 	dh_auto_test -- \
 		PATH=$(CURDIR):$(PATH) \
 		LD_LIBRARY_PATH=$(CURDIR) \
