--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,9 @@ Source: keyutils
 Section: admin
 Priority: optional
 Maintainer: Christian Kastner <ckk@debian.org>
-Build-Depends: debhelper (>= 9), lsb-release
+Build-Depends:
+    debhelper (>= 9),
+    lsb-release,
 Standards-Version: 3.9.6
 Homepage: http://people.redhat.com/~dhowells/keyutils/
 Vcs-Git: git://anonscm.debian.org/collab-maint/keyutils.git
@@ -10,7 +12,9 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/keyutils.git
 
 Package: keyutils
 Architecture: linux-any
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends:
+    ${misc:Depends},
+    ${shlibs:Depends},
 Description: Linux Key Management Utilities
  Keyutils is a set of utilities for managing the key retention facility in the
  kernel, which can be used by filesystems, block devices and more to gain and
@@ -22,8 +26,10 @@ Section: debug
 Priority: extra
 Architecture: linux-any
 Depends:
- ${misc:Depends}, keyutils (= ${binary:Version}),
- libkeyutils1 (= ${binary:Version}), libkeyutils-dev (= ${binary:Version})
+    ${misc:Depends},
+    keyutils (= ${binary:Version}),
+    libkeyutils1 (= ${binary:Version}),
+    libkeyutils-dev (= ${binary:Version}),
 Description: Linux Key Management Utilities (debug)
  Keyutils is a set of utilities for managing the key retention facility in the
  kernel, which can be used by filesystems, block devices and more to gain and
@@ -36,7 +42,9 @@ Package: libkeyutils1
 Section: libs
 Priority: standard
 Architecture: linux-any
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends:
+    ${misc:Depends},
+    ${shlibs:Depends},
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Description: Linux Key Management Utilities (library)
@@ -51,7 +59,9 @@ Description: Linux Key Management Utilities (library)
 Package: libkeyutils-dev
 Section: libdevel
 Architecture: linux-any
-Depends: ${misc:Depends}, libkeyutils1 (= ${binary:Version})
+Depends:
+    ${misc:Depends},
+    libkeyutils1 (= ${binary:Version}),
 Description: Linux Key Management Utilities (development)
  Keyutils is a set of utilities for managing the key retention facility in the
  kernel, which can be used by filesystems, block devices and more to gain and
