--- a/debian/rules
+++ b/debian/rules
@@ -8,7 +8,7 @@ DEB_HOST_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 # Skip MAXDESCLEN tests on these architectures:
-SKIPMAXDESCLEN = mip mipsel sparc
+SKIPMAXDESCLEN = mip mipsel sparc arm64
 
 %:
 	dh ${@}
@@ -25,7 +25,7 @@ override_dh_auto_test:
 	# Use  the library and executable we just built;
 	# skip tests requiring root;
 	# disable maxdesclen tests on mips, mipsel, and sparc
-ifeq (,$(findstring $(DEB_BUILD_ARCH),mips mipsel sparc arm64))
+ifeq (,$(findstring $(DEB_BUILD_ARCH),$(SKIPMAXDESCLEN)))
 	dh_auto_test -- \
 		PATH=$(CURDIR):$(PATH) \
 		LD_LIBRARY_PATH=$(CURDIR) \
