--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/keyutils.git
 
 Package: keyutils
 Architecture: linux-any
+Multi-Arch: foreign
 Depends:
     ${misc:Depends},
     ${shlibs:Depends},
@@ -25,6 +26,7 @@ Package: keyutils-dbg
 Section: debug
 Priority: extra
 Architecture: linux-any
+Multi-Arch: same
 Depends:
     ${misc:Depends},
     keyutils (= ${binary:Version}),
@@ -42,10 +44,10 @@ Package: libkeyutils1
 Section: libs
 Priority: standard
 Architecture: linux-any
+Multi-Arch: same
 Depends:
     ${misc:Depends},
     ${shlibs:Depends},
-Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Description: Linux Key Management Utilities (library)
  Keyutils is a set of utilities for managing the key retention facility in the
@@ -59,6 +61,7 @@ Description: Linux Key Management Utilities (library)
 Package: libkeyutils-dev
 Section: libdevel
 Architecture: linux-any
+Multi-Arch: same
 Depends:
     ${misc:Depends},
     libkeyutils1 (= ${binary:Version}),
