d/control: Switch Vcs-Browser from gitweb to cgit

--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends:
 Standards-Version: 3.9.6
 Homepage: http://people.redhat.com/~dhowells/keyutils/
 Vcs-Git: git://anonscm.debian.org/collab-maint/keyutils.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/keyutils.git
+Vcs-Browser: http://anonscm.debian.org/cgit/collab-maint/keyutils.git
 
 Package: keyutils
 Architecture: linux-any
