--- a/debian/rules
+++ b/debian/rules
@@ -4,6 +4,7 @@ CHANGEDATE = $(shell date -d "`dpkg-parsechangelog -SDate`" +%F)
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
+DEB_VERSION := $(shell dpkg-parsechangelog -S Version)
 DEB_BUILD_ARCH ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 DEB_HOST_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -36,4 +37,4 @@ override_dh_install:
 	dh_install --fail-missing
 
 override_dh_strip:
-	dh_strip --dbg-package=keyutils-dbg
+	dh_strip --dbgsym-migration='keyutils-dbg (<< $(DEB_VERSION)~)'
