d/rules: Read SOURCE_DATE_EPOCH in UTC. (Closes: #828681)
Signed-off-by: Holger Levsen <holger@layer-acht.org>

--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 # $SOURCE_DATE_EPOCH is exported by debhelper
-CHANGEDATE = $(shell date -d @$(SOURCE_DATE_EPOCH) +%F)
+CHANGEDATE = $(shell date -u -d @$(SOURCE_DATE_EPOCH) +%F)
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
