--- a/debian/rules
+++ b/debian/rules
@@ -44,8 +44,8 @@ else
 	echo Testsuite disabled on $(DEB_HOST_ARCH)
 endif
 
-override_dh_install:
-	dh_install --fail-missing
+override_dh_missing:
+	dh_missing --fail-missing
 
 override_dh_strip:
 	dh_strip --dbgsym-migration='keyutils-dbg (<< $(DEB_VERSION)~)'
