--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends:
     debhelper-compat (= 12),
     lsb-release,
 Standards-Version: 4.3.0
-Homepage: http://people.redhat.com/~dhowells/keyutils/
+Homepage: https://people.redhat.com/~dhowells/keyutils/
 Vcs-Git: https://salsa.debian.org/debian/keyutils.git
 Vcs-Browser: https://salsa.debian.org/debian/keyutils
 
