--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,3 +1,3 @@
 Tests: upstream-runtime-tests
-Restrictions: needs-root breaks-testbed allow-stderr
+Restrictions: needs-root breaks-testbed allow-stderr isolation-machine
 Depends: keyutils, lsb-release, file
