--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Christian Kastner <ckk@debian.org>
 Build-Depends:
     debhelper-compat (= 12),
     lsb-release,
+Rules-Requires-Root: no
 Standards-Version: 4.3.0
 Homepage: https://people.redhat.com/~dhowells/keyutils/
 Vcs-Git: https://salsa.debian.org/debian/keyutils.git
